fixed image alignment

--- a/project/styles/ccsc-projects.css
+++ b/project/styles/ccsc-projects.css
@@ -18,8 +18,9 @@
 }
 
 .project-card {
-    display: grid;
-    grid-template-rows: 1fr auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 1rem;
     margin: 1rem;
     border-radius: 20px;
